RESOLVED FIXED289649
[WTF] Fix build failure with MALLOC_HEAP_BREAKDOWN enabled
https://bugs.webkit.org/show_bug.cgi?id=289649
Summary [WTF] Fix build failure with MALLOC_HEAP_BREAKDOWN enabled
Yijia Huang
Reported 2025-03-12 15:31:11 PDT
...
Attachments
Yijia Huang
Comment 1 2025-03-12 15:37:13 PDT
Yijia Huang
Comment 2 2025-03-12 15:38:13 PDT
EWS
Comment 3 2025-03-13 03:35:40 PDT
Committed 292076@main (8362a9428eb1): <https://commits.webkit.org/292076@main> Reviewed commits have been landed. Closing PR #42353 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.