[WTF] Fix build failure with MALLOC_HEAP_BREAKDOWN enabled https://bugs.webkit.org/show_bug.cgi?id=289649 rdar://146895167

Reviewed by Yusuke Suzuki.

* Source/WTF/wtf/Forward.h:
* Source/WTF/wtf/MallocCommon.h:

Canonical link: https://commits.webkit.org/292076@main